--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,1 @@
-![Snake animation](https://https://github.com/brunodealmeida17/brunodealmeida17/blob/output/github-contribution-grid-snake.svg)
+![Snake animation](https://github.com/brunodealmeida17/brunodealmeida17/blob/output/github-contribution-grid-snake.svg)
